<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="title">My Nanodegree Apps</string>
    <string name="button1">Spotify Streamer</string>
    <string name="button2">Super Duo</string>
    <string name="button3">Build It Bigger</string>
    <string name="button4">XYZ Reader</string>
    <string name="button5">Loading</string>
</resources>
